--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-    "printWidth": 100,
-    "tabWidth": 2,
-    "tabs": false,
-    "singleQuote": true,
-    "semicolon": true,
-    "quoteProps": "preserve",
-    "bracketSpacing": false
-  }
+  "printWidth": 100,
+  "tabWidth": 2,
+  "tabs": false,
+  "singleQuote": true,
+  "semicolon": true,
+  "quoteProps": "preserve",
+  "bracketSameLine": true,
+  "bracketSpacing": false
+}
